logs/coinor.grumpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PuLP-1.6.8.egg-info'...
Listing './lib/python3.5/site-packages/coinor'...
Listing './lib/python3.5/site-packages/coinor/blimpy'...
Compiling './lib/python3.5/site-packages/coinor/blimpy/LinkedList.py'...
***   File "./lib/python3.5/site-packages/coinor/blimpy/LinkedList.py", line 110
    raise KeyError, "Index out of bounds"
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinor/blimpy/Stack.py'...
***   File "./lib/python3.5/site-packages/coinor/blimpy/Stack.py", line 63
    print s.pop()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coinor/gimpy'...
Listing './lib/python3.5/site-packages/coinor/gimpy/examples'...
Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/BB.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/BB.py", line 128
    print "==========================================="
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/SAT.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/SAT.py", line 40
    print G
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/maxflow.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/maxflow.py", line 51
    print n, m, g.get_edge_attr(n, m, 'flow')
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/mincostflow.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/mincostflow.py", line 53
    print n, m, g.get_edge_attr(n, m, 'flow')
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinor/gimpy/examples/simplex_test.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/examples/simplex_test.py", line 256
    print 'All problems solved accurately.'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/gimpy/graph.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/graph.py", line 232
    print "Pygame module not installed, graphical display disabled"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/gimpy/tree.py'...
***   File "./lib/python3.5/site-packages/coinor/gimpy/tree.py", line 326
    print root
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coinor/grumpy'...
Compiling './lib/python3.5/site-packages/coinor/grumpy/BBTree.py'...
***   File "./lib/python3.5/site-packages/coinor/grumpy/BBTree.py", line 205
    print 'Gexf not installed. Exiting.'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/grumpy/BranchAndBound.py'...
***   File "./lib/python3.5/site-packages/coinor/grumpy/BranchAndBound.py", line 88
    print "==========================================="
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/grumpy/__main__.py'...
***   File "./lib/python3.5/site-packages/coinor/grumpy/__main__.py", line 18
    print 'line', line_number, 'processed.'
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coinor/grumpy/examples'...
Compiling './lib/python3.5/site-packages/coinor/grumpy/examples/Dippy.py'...
***   File "./lib/python3.5/site-packages/coinor/grumpy/examples/Dippy.py", line 33
    print var.name, "=", var.value()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinor/grumpy/examples/DisplayPolyhedronAndSolveLP.py'...
***   File "./lib/python3.5/site-packages/coinor/grumpy/examples/DisplayPolyhedronAndSolveLP.py", line 37
    print 'Error: Must specify either A and b or points and rays'
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/grumpy/forecasting.py'...
***   File "./lib/python3.5/site-packages/coinor/grumpy/forecasting.py", line 145
    print 'delta: %f' %delta
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coinor/grumpy/polyhedron2D.py'...
***   File "./lib/python3.5/site-packages/coinor/grumpy/polyhedron2D.py", line 234
    print 'Must have plot_max and plot_min set in order to add line'
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coinor.blimpy-1.3.5.egg-info'...
Listing './lib/python3.5/site-packages/coinor.gimpy-1.3.12.egg-info'...
Listing './lib/python3.5/site-packages/coinor.grumpy-0.85.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pulp'...
Listing './lib/python3.5/site-packages/pulp/solverdir'...
Listing './lib/python3.5/site-packages/pulp/solverdir/cbc'...
Listing './lib/python3.5/site-packages/pulp/solverdir/cbc/linux'...
Listing './lib/python3.5/site-packages/pulp/solverdir/cbc/linux/32'...
Listing './lib/python3.5/site-packages/pulp/solverdir/cbc/linux/64'...
Listing './lib/python3.5/site-packages/pulp/solverdir/cbc/osx'...
Listing './lib/python3.5/site-packages/pulp/solverdir/cbc/osx/64'...
Listing './lib/python3.5/site-packages/pulp/solverdir/cbc/win'...
Listing './lib/python3.5/site-packages/pulp/solverdir/cbc/win/32'...
Listing './lib/python3.5/site-packages/pulp/solverdir/cbc/win/64'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
